cli/src/tests/error/variable_assignation.sibs
$var = not_valid_value;
$var = {};
$var = if $dev == "one" { env::is_os() };